--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -149,20 +149,6 @@
   }
 }
 
-.about__link {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.67;
-  letter-spacing: 0.06em;
-  text-decoration: underline;
-  color: var(--accent-color);
-
-  @include mq(desk) {
-    font-size: 18px;
-    line-height: calc(28 / 18);
-  }
-}
-
 .about-list {
   border-top: 1px solid var(--main-text-color);
   padding-top: 20px;
@@ -181,26 +167,40 @@
 
 .content {
   margin-bottom: 20px;
-  @include mq(tab) {
-    margin-bottom: 30px;
-  }
+
   @include mq(desk) {
     margin-bottom: 22px;
   }
 
   &:before {
+    position: relative;
+    margin-bottom: 20px;
+
     content: '';
     display: block;
     width: 20px;
     height: 2px;
     background-color: var(--accent-color);
 
-    margin-bottom: 20px;
+    @include mq(tab) {
+      margin-bottom: 30px;
+    }
+    @include mq(desk) {
+      margin-bottom: 43px;
+    }
   }
-  @include mq(tab) {
-    margin-bottom: 30px;
-  }
+}
+
+.about__link {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.67;
+  letter-spacing: 0.06em;
+  text-decoration: underline;
+  color: var(--accent-color);
+
   @include mq(desk) {
-    margin-bottom: 43px;
+    font-size: 18px;
+    line-height: calc(28 / 18);
   }
 }
