--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="contacts">
+<section class="contacts" id="contacts">
   <div class="container">
     <h2 class="contacts-title">
       Registration for a <span class="active">free</span> phone
