--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -2,7 +2,7 @@
     --accent-color: #FF6B09;
     --white-color: #FFFFFF;
     --title-color: #111518;
-    --main-background: #F1F1F1;
+    --main-background: #FFFFFF;
     --secondary-background: #111518;
     --main-text-color: #B9B9B9;
     --secondary-text-color: #3D3D3D;  
